update dialog to also handle dynamic content and modify questionnaire submission lists to work with dialogs